# ai-detection2

./: .gitignore  .gitmodules  CMakeCPack.cmake  CMakeLists.txt  Jenkinsfile  README.md  pyproject.toml
ai_detection/: __init__.py  __main__.py  main.py
ai_detection_cxx/: main.cpp  webcam_publisher.cpp
ai_detection_cxx/botsort/: CMakeLists.txt
ai_detection_cxx/botsort/include/: BotKalmanFilterAccBased.h  ReID.h  track.h
ai_detection_cxx/botsort/include/TRT_InferenceEngine/: tensorrt_inference_engine.h
ai_detection_cxx/botsort/src/: BoTSORT.cpp  BotKalmanFilter.cpp  matching.cpp  track.cpp
ai_detection_cxx/botsort/weights/: osnet_x0_25_market1501_AiM-3bff_GPU_Orin_TRT100300_CUDA12060_1_TF32_FP16.engine
ai_detection_cxx/bytetrack/: CMakeLists.txt
ai_detection_cxx/bytetrack/src/: BYTETracker.cpp
ai_detection_cxx/bytetrack/src/ByteTrack/: BYTETracker.h  STrack.h
ai_detection_cxx/yolo/: CMakeLists.txt
ai_detection_cxx/yolo/scripts/: export.py  export_osnet.py  extract_labels.py
ai_detection_cxx/yolo/src/: YOLOv11.cpp  YOLOv11.h  onnx2engine.cpp  postprocess.cu  preprocess.cu  preprocess.h
botsort/: CMakeLists.txt
botsort/config/: tracker.ini
botsort/include/: BoTSORT.h  BotKalmanFilter.h  matching.h
botsort/include/TRT_InferenceEngine/: tensorrt_inference_engine.h
botsort/src/: BotKalmanFilterAccBased.cpp
botsort/src/TRT_InferenceEngine/: tensorrt_inference_engine.cpp
bytetrack/src/: STrack.cpp
ci/: build_package.sh  run_code_validation.sh  run_tests.sh
ci/docker/: shell.sh  with_docker.sh
ci/docker/amd64/bionic/: Dockerfile
ci/docker/amd64/noble/: Dockerfile
ci/docker/arm64/bionic/: Dockerfile
ci/linux/: Dockerfile  shell.sh  with_docker.sh
cmake/: FindTensorRT.cmake
scripts/: build.sh  build_package.sh  format.sh  install_build_dependencies.sh  run_format.sh  run_lint.sh  run_static_typing.sh  run_tests.sh  with_dev_venv.sh
tests/integration_tests/: test_ai_detection.py
yolo/: CMakeLists.txt
yolo/scripts/: export.py  test.py  test_onnx.py
yolo/src/: YOLOv11.cpp  YOLOv11.h  onnx2engine.cpp  postprocess.cu  preprocess.cu  preprocess.h
